--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,8 @@
       </section>
       <footer>
         {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">Sourcecode on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+        <!-- <p class="view"><a href="{{ site.github.repository_url }}">Sourcecode on GitHub <small>{{ site.github.repository_nwo }}</small></a></p> -->
+        <p class="view"><a href="https://github.com/cleanchain">Project hosted on GitHub <small>github.com/cleanchain</small></a></p>
         {% endif %}
       </footer>
     </div>
